NEXT-16140 - Fix misalignment when using multiselection in product list

--- a/src/Administration/Resources/app/administration/src/module/sw-sales-channel/component/sw-sales-channel-products-assignment-dynamic-product-groups/sw-sales-channel-products-assignment-dynamic-product-groups.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-sales-channel/component/sw-sales-channel-products-assignment-dynamic-product-groups/sw-sales-channel-products-assignment-dynamic-product-groups.scss
@@ -2,4 +2,12 @@
     &__link-open {
         cursor: pointer;
     }
+
+    .sw-data-grid .sw-data-grid__bulk {
+        padding-left: 100px !important;
+    }
+
+    .sw-data-grid .sw-data-grid__bulk-selected {
+        margin: 12px 8px;
+    }
 }
