--- a/src/Administration/Resources/app/administration/src/module/sw-sales-channel/component/sw-sales-channel-products-assignment-single-products/sw-sales-channel-products-assignment-single-products.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-sales-channel/component/sw-sales-channel-products-assignment-single-products/sw-sales-channel-products-assignment-single-products.scss
@@ -11,6 +11,14 @@
         position: relative;
     }
 
+    .sw-data-grid .sw-data-grid__bulk {
+        padding-left: 100px !important;
+    }
+
+    .sw-data-grid .sw-data-grid__bulk-selected {
+        margin: 12px 8px;
+    }
+
     .sw-card .sw-card__content {
         padding: 0;
         min-height: 100px;
